# smartknob2048

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
app/: Cargo.toml
app/src/: lib.rs
stm32/: Cargo.toml
stm32/.cargo/: config.toml
stm32/src/: hid.rs  main.rs  renderer.rs
